# minimalWay

./: CMakeLists.txt  input.txt  main.cpp  tests.cpp
googletest/googlemock/docs/: cheat_sheet.md  cook_book.md  gmock_faq.md
googletest/googlemock/include/gmock/: gmock-matchers.h
googletest/googletest/include/gtest/internal/: gtest-param-util.h  gtest-port.h
googletest/googletest/src/: gtest-port.cc  gtest.cc
src/: findMin.cpp  lib.h  readFile.cpp  test.h
